@@ -1,5 +1,6 @@
 
 v0.4
+	- add start/finish line
 	- add pit walls
 	- add cameras
 	- add turnmarks
